Public/global.css
html {
 height: 100%;
 width: 100%;
 margin: 0px;
 padding: 0px;
 font-family: Tahoma;
 color: black;
}

hr {
 width: 100%;
}

body pre {
 overflow-x: auto;
 padding: 8px;
 background: rgba(0,0,0,0.66);
 border-top: 2px solid rgba(0,0,0,0.66); border-right: 2px solid rgba(0,0,0,0.66); border-bottom: 2px solid rgba(0,0,0,0.66); border-left: 2px solid rgba(0,0,0,0.66);
 border-radius: 8px;
}
body {
 background: linen;
 height: 100%;
 width: 100%;
 margin: 0px;
 padding: 0px;
}

p {
 font-size: 0.87rem;
 line-height: 1.2rem;
}

h1 {
 margin-top: 4px; margin-bottom: 4px;
}

h2 {
 margin-top: 4px; margin-bottom: 4px;
}

a {
 color: #DB6700;
 text-decoration: none;
}

a:hover {
 color: blue;
 text-decoration: underline;
}

.root-body-container {
 padding: 8px;
}

.body-navigation-container a {
 display: block;
 margin: 0px;
 padding: 8px;
}
.body-navigation-container {
 height: 40%;
 width: 196px;
 margin: 0px;
 padding: 0px;
 position: fixed;
 border-top: 2px solid rgba(24,48,96,1.0); border-right: 2px solid rgba(24,48,96,1.0); border-bottom: 2px solid rgba(24,48,96,1.0); border-left: 2px solid rgba(24,48,96,1.0);
 border-radius: 8px;
}

.body-content-container {
 display: block;
 margin-left: 208px;
 padding: 8px;
 border-top: 2px solid rgba(24,24,48,1.0); border-right: 2px solid rgba(24,24,48,1.0); border-bottom: 2px solid rgba(24,24,48,1.0); border-left: 2px solid rgba(24,24,48,1.0);
 border-radius: 8px;
}

@media screen and (max-width: 800px) {
  .root-body-container {
 padding: 0px;
}

.body-navigation-container a {
 float: left;
}
.body-navigation-container {
 width: 100%;
 height: 8%;
 position: relative;
 border-top: 0px none rgba(24,24,48,1.0); border-right: 0px none rgba(24,24,48,1.0); border-bottom: 0px none rgba(24,24,48,1.0); border-left: 0px none rgba(24,24,48,1.0);
 border-radius: 0px;
}

.body-content-container {
 margin-left: 0px;
 border-radius: 0px;
}

}

